// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Revealer /> direction DOWN 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  opacity: 0;
  -webkit-transform: translateY(-42px);
  -ms-transform: translateY(-42px);
  transform: translateY(-42px);
  -webkit-transition: opacity 0.6s ease,-webkit-transform 0.6s ease;
  -webkit-transition: opacity 0.6s ease,transform 0.6s ease;
  transition: opacity 0.6s ease,transform 0.6s ease;
}

<Revealer
  direction="DOWN"
  easeTiming="0.6"
  height={100}
  show={false}
>
  <div
    className="c0"
    direction="DOWN"
    height={100}
  />
</Revealer>
`;

exports[`<Revealer /> easeTiming 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  opacity: 1;
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: opacity 0.6s ease,-webkit-transform 0.6s ease;
  -webkit-transition: opacity 0.6s ease,transform 0.6s ease;
  transition: opacity 0.6s ease,transform 0.6s ease;
}

<Revealer
  easeTiming="0.6"
  height={100}
  show={true}
>
  <div
    className="c0"
    height={100}
  />
</Revealer>
`;

exports[`<Revealer /> renders properly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  opacity: 0;
  -webkit-transform: translateY(42px);
  -ms-transform: translateY(42px);
  transform: translateY(42px);
  -webkit-transition: opacity 0.8s ease,-webkit-transform 0.8s ease;
  -webkit-transition: opacity 0.8s ease,transform 0.8s ease;
  transition: opacity 0.8s ease,transform 0.8s ease;
}

<Revealer
  height={100}
>
  <div
    className="c0"
    height={100}
  />
</Revealer>
`;

exports[`<Revealer /> show: true 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  opacity: 1;
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: opacity 0.8s ease,-webkit-transform 0.8s ease;
  -webkit-transition: opacity 0.8s ease,transform 0.8s ease;
  transition: opacity 0.8s ease,transform 0.8s ease;
}

<Revealer
  height={100}
  show={true}
>
  <div
    className="c0"
    height={100}
  />
</Revealer>
`;
